updated z-index to resolve issue

--- a/themes/navy/source/scss/popup.scss
+++ b/themes/navy/source/scss/popup.scss
@@ -6,7 +6,7 @@
   height: 100%;
   overflow: auto;
   box-sizing: border-box;
-  z-index: 700;
+  z-index: 9000;
 
   visibility: hidden;
   pointer-events: none;
